--- a/btvnb2/b1.html
+++ b/btvnb2/b1.html
@@ -6,26 +6,28 @@
         <title>Bài1</title>
     </head>
     <body>
-        <header>Posted by BGB, November, 2012</header>
-        <h1><b>Low and Slow</b></h1>
-        <p>
-            This week I am <em>extremely</em> excited about cooking technique
-            called sous vide. In <em>sous vide</em> cooking, you submerde the
-            food(usually vacuum sealed in plastic) into a wter bath thar is
-            aprecisele set to the target temperature you want the food to be
-            cooked to. In his book, <i>Cooking fir Geeks</i>, Jeff Potter
-            describes ir as " ultra-low temperature poaching".
-        </p>
-        <p>
-            Next month, we will be serving
-            <strong>Sous Vide Salmon with Dil Hollandaise</strong>. To reserve a
-            seat ar the chef table, contact us before November 30.
-        </p>
-        <p>blackgoose@example.com <br />555-336</p>
+        <article>
+            <time>Posted by BGB, November, 2012</time>
+            <h1><b>Low and Slow</b></h1>
+            <p>
+                This week I am <em>extremely</em> excited about cooking
+                technique called sous vide. In <em>sous vide</em> cooking, you
+                submerde the food(usually vacuum sealed in plastic) into a wter
+                bath thar is aprecisele set to the target temperature you want
+                the food to be cooked to. In his book, <i>Cooking fir Geeks</i>,
+                Jeff Potter describes ir as " ultra-low temperature poaching".
+            </p>
+            <p>
+                Next month, we will be serving
+                <strong>Sous Vide Salmon with Dil Hollandaise</strong>. To
+                reserve a seat ar the chef table, contact us before November 30.
+            </p>
+            <p>blackgoose@example.com <br />555-336</p>
 
-        <p>
-            Warming:Sous vide cooked salmon is not pasteurized.Avoid it if you
-            are pregnant or h VE IMMUNITY ISSUES.
-        </p>
+            <p>
+                Warming:Sous vide cooked salmon is not pasteurized.Avoid it if
+                you are pregnant or h VE IMMUNITY ISSUES.
+            </p>
+        </article>
     </body>
 </html>
